<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_gravity="center" android:layout_weight="2">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_gravity="center" android:layout_weight="3">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_gravity="center_horizontal|top"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/info_tvTitle" android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_gravity="right|center_vertical"
                    android:layout_weight="1.5">
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_btLogout"
                        android:id="@+id/info_btLogout"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:textColor="#ffffff" android:gravity="right|top" android:paddingRight="3dp"
                        android:textStyle="italic"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_gravity="left|center_vertical"
                    android:layout_weight="2">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/info_imvAvata" android:src="@drawable/ic_launcher"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:paddingLeft="3dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_tvAddress"
                        android:id="@+id/info_tvAddress" android:layout_weight="1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_tvBirthday"
                        android:id="@+id/info_tvBirthday" android:layout_gravity="center" android:layout_weight="1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_tvGender"
                        android:id="@+id/info_tvGender" android:layout_gravity="center" android:layout_weight="1"/>
                <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" android:layout_weight="0.5" android:visibility="gone"
                        android:id="@+id/radioGroup">
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_radiobutton_male"
                            android:id="@+id/radioButton_male" android:layout_gravity="left|center_vertical"
                            android:checked="false"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_radiobutton_female"
                            android:id="@+id/radioButton_female" android:layout_gravity="left|center_vertical"
                            android:checked="true"/>
                </RadioGroup>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/info_tvOnline"
                        android:id="@+id/info_tvOnline" android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="2">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_gravity="center" android:layout_weight="8">
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_cbListFriend"
                    android:id="@+id/info_cbListFriend" android:layout_gravity="left|center_vertical" android:checked="false"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1.6">
            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/info_listview_friendList"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>