<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_weight="1" android:padding="5dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_gravity="center" android:layout_weight="0.9">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_tvUsername"
                    android:id="@+id/textView" android:layout_gravity="left|center_vertical" android:layout_weight="1"
                    android:gravity="bottom" android:paddingBottom="3dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/login_edtUsername" android:layout_gravity="left|center_vertical" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_gravity="center" android:layout_weight="0.9"
                      android:id="@+id/linearLayout">
            <TextView android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/login_tvPassword"
                      android:id="@+id/textView1" android:layout_gravity="left|center_vertical" android:layout_weight="1"
                      android:gravity="bottom" android:paddingBottom="3dp"/>
            <EditText android:layout_width="match_parent" android:layout_height="match_parent"
                      android:id="@+id/login_edtPassword"
                      android:layout_gravity="left|center_vertical" android:layout_weight="1"
                      android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_gravity="center" android:layout_weight="1.3"
                android:gravity="center|center_vertical|center_horizontal">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:layout_weight="1">
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:layout_weight="1">
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login_btLogin"
                        android:id="@+id/login_btLogin" android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:layout_weight="1">
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_weight="1.6">
    </LinearLayout>
</LinearLayout>